# pdf-form-filling-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
api/app/: main.py  pdf_engine.py  schemas.py
api/app/routers/: documents.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: main.js  style.css
