[project]
name = "pdf-form-filling-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "pre-commit>=4.6.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
